tests/integration/snapshots/integration__conformance__n_number_0.3e+.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 1
success: false
stdout ---
[0.3e+]
stderr ---
error: expected digit after exponent indicator, found `]`
 --> stdin:1:7
  |
1 | [0.3e+]
  |  -----^
  |  |  |
  |  |  exponent indicator found here
  |  number with exponent found here
