tests/integration/snapshots/integration__conformance__n_number_0.e1.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 1
success: false
stdin ---
[0.e1]
stdout ---

stderr ---
error: expected fraction digit following dot, found `e`
 --> stdin:1:4
  |
1 | [0.e1]
  |  --^
  |  ||
  |  |decimal point found here
  |  number found here
