tests/integration/snapshots/integration__conformance__n_number_0_capital_e+.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 1
success: false
stdout ---
[0E+]
stderr ---
error: expected digit after exponent indicator, found `]`
 --> stdin:1:5
  |
1 | [0E+]
  |  ---^
  |  ||
  |  |exponent indicator found here
  |  number with exponent found here
